channel broadcast / login popup working, TO DO login validation, message broadcast, channel name on top, links on channels

--- a/static/styles.css
+++ b/static/styles.css
@@ -95,9 +95,18 @@
     padding-bottom: 2px;
     padding-left: 32px;
     padding-right: 8px;
-    text-decoration: none;
     font-size: medium;
-    display: block;
+}
+
+.sidenav > form {
+    padding-left: 42px;
+}
+
+#channelfeedback {
+    font-size: small;
+    font-style: italic;
+    color: red;
+    padding-left: 42px;
 }
 
 ul li {
@@ -119,4 +128,70 @@ ul li {
     right: 25px;
     font-size: 30px;
     margin-left: 50px;
+}
+
+#overlay {
+    display: block;
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 8;
+    top: 0;
+    left: 0;
+    background-color: yellow;
+    opacity: 0.6;
+}
+
+/* For popup form with form for display name - hidden by default */
+.form-popup {
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 300px;
+  padding: 10px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+.form-container {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
