--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
         <script src="{{ url_for('static', filename='index.js') }}"></script>
 
         <title>Flack {% block title %}{% endblock %}</title>
@@ -34,8 +35,11 @@
             <span>Favorite channels</span>
             <ul id="favorites">
             </ul>
-            <span><a href="#">Add favorite</a></span>
-            <span><a href="#">Create new channel</a></span>
+            <span>Create new channel:</span>
+            <form id="newchannel" class="form-container">
+                <input id="channel" type="text" placeholder="New channel" name="channel" required>
+            </form>
+            <span id="channelfeedback">Feedback</span><br>
             <span>All channels</span>
             <ul id="channels">
                 {% for channel in channels %}
@@ -109,30 +113,15 @@
         </main>
 
 <!-- pop-up form for creating display name -->
+        <div id="overlay">
+        </div>
         <div class="form-popup">
             <form action="/createdisplayname" id="newdisplayname" class="form-container">
-                <h1>New display name</h1>
-
-                <label for="displayname"><b>Display name</b></label>
+                <h3>Please create a display name</h3>
+                <span>Your display name will be visible with every message that you send</span>
                 <input type="text" placeholder="Display name" name="displayname" required>
-                <span id="displaynamefeedback">Feedback</span>
-
+                <br><span id="displaynamefeedback">Feedback</span>
                 <button type="submit" class="btn">Create</button>
-                <button type="submit" class="btn cancel" onclick="closeForm('newdisplayname')">Cancel</button>
-            </form>
-        </div>
-
-<!-- pop-up form for creating new channel -->
-        <div class="form-popup">
-            <form action="/createnewchannel" id="newchannel" class="form-container">
-                <h1>New channel</h1>
-
-                <label for="channel"><b>Channel name</b></label>
-                <input type="text" placeholder="Name of new channel" name="channel" required>
-                <span id="channelfeedback">Feedback</span>
-
-                <button type="submit" class="btn">Create</button>
-                <button type="submit" class="btn cancel" onclick="closeForm('newchannel')">Cancel</button>
             </form>
         </div>
 
