--- a/static/styles.css
+++ b/static/styles.css
@@ -34,6 +34,14 @@
     padding: 0;
 }
 
+#favorite-button {
+    margin-bottom: 5px;
+}
+
+#messages {
+    margin-top: 60px;
+}
+
 .messageheader {
     font-style: italic;
     font-size: small;
@@ -100,6 +108,7 @@
 
 .sidenav > form {
     padding-left: 42px;
+    margin: 0;
 }
 
 #channelfeedback {
@@ -131,20 +140,19 @@ ul li {
 }
 
 #overlay {
-    display: block;
+    display: none;
     position: fixed;
     height: 100%;
     width: 100%;
     z-index: 8;
     top: 0;
     left: 0;
-    background-color: yellow;
+    background-color: green;
     opacity: 0.6;
 }
 
 /* For popup form with form for display name - hidden by default */
 .form-popup {
-    display: block;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -152,43 +160,35 @@ ul li {
     z-index: 9;
 }
 
+#displayname-popup {
+    display: none;
+}
+
 /* Add styles to the form container */
 .form-container {
   max-width: 300px;
-  padding: 10px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-.form-container {
   width: 100%;
+  background-color: white;
   padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+  margin: 15px;
+  background: whitesmoke;
 }
 
-/* When the inputs get focus, do something */
-.form-container:focus {
-  background-color: #ddd;
-  outline: none;
+#displayname-feedback {
+    font-size: small;
+    font-style: italic;
+    color: red;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: #4CAF50;
+  background-color: green;
   color: white;
-  padding: 16px 20px;
-  border: none;
+  padding: 5px;
   cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
+  width: 60%;
+  margin: 5px;
   opacity: 0.8;
-}
-
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
 }
 
 /* Add some hover effects to buttons */
